--- a/Emplokey/Emplokey.csproj
+++ b/Emplokey/Emplokey.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="settingsHelper.cs" />
     <EmbeddedResource Include="Form_installCert.resx">
       <DependentUpon>Form_installCert.cs</DependentUpon>
     </EmbeddedResource>
