--- a/Emplokey/Emplokey.csproj
+++ b/Emplokey/Emplokey.csproj
@@ -58,20 +58,29 @@
     <Compile Include="Form_main.Designer.cs">
       <DependentUpon>Form_main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_certManager.cs">
+    <Compile Include="Form_certificates.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_certManager.Designer.cs">
-      <DependentUpon>Form_certManager.cs</DependentUpon>
+    <Compile Include="Form_certificates.Designer.cs">
+      <DependentUpon>Form_certificates.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_setPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_setPassword.Designer.cs">
+      <DependentUpon>Form_setPassword.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="settingsHelper.cs" />
-    <EmbeddedResource Include="Form_certManager.resx">
-      <DependentUpon>Form_certManager.cs</DependentUpon>
+    <EmbeddedResource Include="Form_certificates.resx">
+      <DependentUpon>Form_certificates.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_main.resx">
       <DependentUpon>Form_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_setPassword.resx">
+      <DependentUpon>Form_setPassword.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
