--- a/Emplokey Server/Emplokey Server.csproj
+++ b/Emplokey Server/Emplokey Server.csproj
@@ -70,7 +70,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="ServerInfo.cs" />
     <Compile Include="settingsHelper.cs" />
     <EmbeddedResource Include="form_main.resx">
       <DependentUpon>form_main.cs</DependentUpon>
