--- a/Emplokey/App.config
+++ b/Emplokey/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Emplokey.Properties.Settings.EmplokeyConnectionString"
+            connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Emplokey;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
